--- a/util/sugar/src/scss/core/class/helper/_all.scss
+++ b/util/sugar/src/scss/core/class/helper/_all.scss
@@ -1,9 +1,11 @@
 @import 'block';
+@import 'border';
 @import 'clear';
 @import 'clearfix';
 @import 'color';
 @import 'display';
 @import 'filter';
+@import 'flex';
 @import 'font';
 @import 'link';
 @import 'margin';
