--- a/util/sugar/src/scss/core/class/helper/_ratio.scss
+++ b/util/sugar/src/scss/core/class/helper/_ratio.scss
@@ -2,26 +2,47 @@
 
   @if class-match-namespace("sugar.helper.ratio.21-9") {
     /**
-    * @name 		ratio-21-9
+    * @name 		s-ratio-21-9
     * @namespace         scss.core.class.helper
     * @class-namespace     sugar.helper.ratio.21-9
     * @type        class
     *
-    * Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 16 * 9
+    * Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 21 * 9
     *
     * @example 	html
-    * <div class="bkg-primary ratio-21-9"></div>
+    * <div class="s-bg-primary s-ratio-21-9"></div>
     *
     * @since       1.0.0
     * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
     */
-    .ratio-21-9 {
+    .s-ratio-21-9 {
      @include ratio(21/9);
     }
   }
+  @if class-match-namespace("sugar.helper.ratio.9-21") {
+    /**
+    * @name 		s-ratio-9-21
+    * @namespace         scss.core.class.helper
+    * @class-namespace     sugar.helper.ratio.9-21
+    * @type        class
+    *
+    * Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 9 * 21
+    *
+    * @example 	html
+    * <div class="s-bg-primary s-ratio-9-21"></div>
+    *
+    * @since       1.0.0
+    * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
+    */
+    .s-ratio-9-21 {
+     @include ratio(9/21);
+    }
+  }
+
+
   @if class-match-namespace("sugar.helper.ratio.16-9") {
     /**
-    * @name 		ratio-16-9
+    * @name 		s-ratio-16-9
     * @namespace         scss.core.class.helper
     * @class-namespace     sugar.helper.ratio.16-9
     * @type        class
@@ -29,18 +50,39 @@
     * Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 16 * 9
     *
     * @example 	html
-    * <div class="bkg-primary ratio-16-9"></div>
+    * <div class="s-bg-primary s-ratio-16-9"></div>
     *
     * @since       1.0.0
     * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
     */
-    .ratio-16-9 {
+    .s-ratio-16-9 {
       @include ratio(16/9);
     }
   }
+  @if class-match-namespace("sugar.helper.ratio.9-16") {
+    /**
+    * @name 		s-ratio-9-16
+    * @namespace         scss.core.class.helper
+    * @class-namespace     sugar.helper.ratio.9-16
+    * @type        class
+    *
+    * Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 9 * 16
+    *
+    * @example 	html
+    * <div class="s-bg-primary s-ratio-9-16"></div>
+    *
+    * @since       1.0.0
+    * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
+    */
+    .s-ratio-9-16 {
+      @include ratio(9/16);
+    }
+  }
+
+
   @if class-match-namespace("sugar.helper.ratio.4-3") {
     /**
-    * @name 		ratio-4-3
+    * @name 		s-ratio-4-3
     * @namespace         scss.core.class.helper
     * @class-namespace     sugar.helper.ratio.4-3
     * @type        class
@@ -48,18 +90,39 @@
     * Keep a 4/3 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 4 * 3
     *
     * @example 	html
-    * <div class="bkg-primary ratio-4-3"></div>
+    * <div class="s-bg-primary s-ratio-4-3"></div>
     *
     * @since       1.0.0
     * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
     */
-    .ratio-4-3 {
+    .s-ratio-4-3 {
       @include ratio(4/3);
     }
   }
+  @if class-match-namespace("sugar.helper.ratio.3-4") {
+    /**
+    * @name 		s-ratio-3-4
+    * @namespace         scss.core.class.helper
+    * @class-namespace     sugar.helper.ratio.3-4
+    * @type        class
+    *
+    * Keep a 3/4 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 3 * 4
+    *
+    * @example 	html
+    * <div class="s-bg-primary s-ratio-3-4"></div>
+    *
+    * @since       1.0.0
+    * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
+    */
+    .s-ratio-3-4 {
+      @include ratio(4/3);
+    }
+  }
+
+
   @if class-match-namespace("sugar.helper.ratio.1-1") {
     /**
-    * @name 		ratio-1-1
+    * @name 		s-ratio-1-1
     * @namespace         scss.core.class.helper
     * @class-namespace     sugar.helper.ratio.1-1
     * @type        class
@@ -67,12 +130,12 @@
     * Keep a 1/1 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100%
     *
     * @example 	html
-    * <div class="bkg-primary ratio-1-1"></div>
+    * <div class="s-bg-primary s-ratio-1-1"></div>
     *
     * @since       1.0.0
     * @author 			Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
     */
-    .ratio-1-1 {
+    .s-ratio-1-1 {
       @include ratio(1);
     }
   }
