--- a/toolkits/sugar/public/src/scss/04_templates/_header.scss
+++ b/toolkits/sugar/public/src/scss/04_templates/_header.scss
@@ -1,5 +1,5 @@
 .ck-header {
-  background: Sugar.color(secondary);
+  background: Sugar.color(dark);
   height: 70px;
   width: calc(100% - 100px);
   display: block;
@@ -17,32 +17,32 @@
   }
 
 
-.grid-1 {
-  @include Sugar.grid-layout((
-    '1 1 1 1 1 1 1 2 2 2 2 6',
-    '3 3 3 3 3 3 9 9 4 4 4 6',
-    '3 3 3 3 3 3 9 9 5 5 5 6'
-  ));
-  height: 100vh;
+// .grid-1 {
+//   @include Sugar.grid-layout((
+//     '1 1 1 1 1 1 1 2 2 2 2 6',
+//     '3 3 3 3 3 3 9 9 4 4 4 6',
+//     '3 3 3 3 3 3 9 9 5 5 5 6'
+//   ));
+//   height: 100vh;
 
-    .area-p,
-  .area-1 {
-    background: red;
-  }
-  .area-2 {
-    background: blue;
-  }
-  .area-3 {
-    background: yellow;
-  }
-  .area-4 {
-    background: green;
-  }
-  .area-5 {
-    background: magenta;
-  }
-  .area-9 {
-    background: cyan;
-  }
+//     .area-p,
+//   .area-1 {
+//     background: red;
+//   }
+//   .area-2 {
+//     background: blue;
+//   }
+//   .area-3 {
+//     background: yellow;
+//   }
+//   .area-4 {
+//     background: green;
+//   }
+//   .area-5 {
+//     background: magenta;
+//   }
+//   .area-9 {
+//     background: cyan;
+//   }
 
-}
+// }
