--- a/toolkits/sugar-ui/src/scss/03_generic/_all.scss
+++ b/toolkits/sugar-ui/src/scss/03_generic/_all.scss
@@ -2,4 +2,5 @@
  * Generic
  * All the generic codebase for the project like typography, resets, etc...
  */
+@import 'classes';
 @import 'text-format';
