--- a/toolkits/sugar/src/scss/_sugar.scss
+++ b/toolkits/sugar/src/scss/_sugar.scss
@@ -1,6 +1,7 @@
 @import 'core/all';
 
 @import 'coffeekraken/all';
+@import 'components/all';
 @import 'effect/all';
 @import 'form/all';
 @import 'format/all';
