--- a/toolkits/sugar/src/scss/core/string/_str-index.scss
+++ b/toolkits/sugar/src/scss/core/string/_str-index.scss
@@ -23,7 +23,7 @@
     string,
     $string
   );
-  $string: test-argument(
+  $substring: test-argument(
     'Sugar.str-index',
     'substring',
     string,
