--- a/toolkits/sugar-ui/src/scss/08_atoms/_btn.scss
+++ b/toolkits/sugar-ui/src/scss/08_atoms/_btn.scss
@@ -1,3 +1,1 @@
-@import 'node_modules/coffeekraken-s-button-component/index';
-
-@include s-button-classes($colors: default primary secondary);
+@include Sugar.btn-classes();
