--- a/toolkits/sugar-ui/src/scss/06_organisms/_all.scss
+++ b/toolkits/sugar-ui/src/scss/06_organisms/_all.scss
@@ -4,5 +4,6 @@
  * An organism can contain other molecules or atoms and does not have to relay on his ancestors
  * to be properly displayed.
  */
+@import 'card';
 @import 'inline-bar';
 @import 'marked';
