--- a/toolkits/sugar/src/scss/core/class/helper/_padding.scss
+++ b/toolkits/sugar/src/scss/core/class/helper/_padding.scss
@@ -36,7 +36,7 @@
 
 
       @if class-match-namespace("sugar.helper.padding.bottom.#{$name}") {
-        $cname: selector("s-p-b-#{$name}");
+        $cname: selector("s-pb-#{$name}");
         /**
           * @name       	#{$cname}
           * @namespace       scss.core.class
@@ -60,7 +60,7 @@
 
 
       @if class-match-namespace("sugar.helper.padding.top.#{$name}") {
-        $cname: selector("s-p-t-#{$name}");
+        $cname: selector("s-pt-#{$name}");
         /**
           * @name       	#{$cname}
           * @namespace       scss.core.class
@@ -84,7 +84,7 @@
 
 
       @if class-match-namespace("sugar.helper.padding.left.#{$name}") {
-        $cname: selector("s-p-l-#{$name}");
+        $cname: selector("s-pl-#{$name}");
         /**
           * @name       	#{$cname}
           * @namespace       scss.core.class
@@ -108,7 +108,7 @@
 
 
       @if class-match-namespace("sugar.helper.padding.right.#{$name}") {
-        $cname: selector("s-p-r-#{$name}");
+        $cname: selector("s-pr-#{$name}");
         /**
           * @name       	#{$cname}
           * @namespace       scss.core.class
@@ -132,7 +132,7 @@
 
 
       @if class-match-namespace("sugar.helper.padding.side.#{$name}") {
-        $cname: selector("s-p-s-#{$name}");
+        $cname: selector("s-ps-#{$name}");
         /**
           * @name       	#{$cname}
           * @namespace       scss.core.class
@@ -157,7 +157,7 @@
 
 
       @if class-match-namespace("sugar.helper.padding.y.#{$name}") {
-        $cname: selector("s-p-y-#{$name}");
+        $cname: selector("s-py-#{$name}");
         /**
           * @name       	#{$cname}
           * @namespace       scss.core.class
@@ -185,7 +185,7 @@
 
     @if class-match-namespace("sugar.helper.padding.no.top") {
       /**
-      * @name       	s-no-p-t
+      * @name       	s-no-pt
       * @namespace       scss.core.class
       * @class-namespace           sugar.helper.padding.no.top
       * @type        class
@@ -193,12 +193,12 @@
       * Reset **top** padding
       *
       * @example 	html
-      * <div class="s-no-p-t" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+      * <div class="s-no-pt" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
       *
       * @since       1.0.0
       * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
       */
-      .s-no-p-t {
+      .s-no-pt {
         padding-top: 0 !important;
       }
     }
@@ -206,7 +206,7 @@
 
     @if class-match-namespace("sugar.helper.padding.no.right") {
       /**
-        * @name       	s-no-p-r
+        * @name       	s-no-pr
         * @namespace       scss.core.class
         * @class-namespace           sugar.helper.padding.no.right
         * @type        class
@@ -214,12 +214,12 @@
         * Reset **right** padding
         *
         * @example 	html
-        * <div class="s-no-p-r" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="s-no-pr" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .np-p-r {
+      .s-no-pr {
         padding-right: 0 !important;
       }
     }
@@ -227,7 +227,7 @@
 
     @if class-match-namespace("sugar.helper.padding.no.bottom") {
       /**
-        * @name       	s-no-p-b
+        * @name       	s-no-pb
         * @namespace       scss.core.class
         * @class-namespace           sugar.helper.padding.no.bottom
         * @type        class
@@ -235,12 +235,12 @@
         * Reset **bottom** padding
         *
         * @example 	html
-        * <div class="s-no-p-b" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="s-no-pb" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .s-no-p-b {
+      .s-no-pb {
         padding-bottom: 0 !important;
       }
     }
@@ -248,7 +248,7 @@
 
     @if class-match-namespace("sugar.helper.padding.no.left") {
       /**
-        * @name       	s-no-p-l
+        * @name       	s-no-pl
         * @namespace       scss.core.class
         * @class-namespace           sugar.helper.padding.no.left
         * @type        class
@@ -256,12 +256,12 @@
         * Reset **left** padding
         *
         * @example 	html
-        * <div class="s-no-p-l" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="s-no-pl" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .s-no-p-l {
+      .s-no-pl {
         padding-left: 0 !important;
       }
     }
@@ -269,7 +269,7 @@
 
     @if class-match-namespace("sugar.helper.padding.no.side") {
       /**
-        * @name       	s-no-p-s
+        * @name       	s-no-ps
         * @namespace       scss.core.class
         * @class-namespace           sugar.helper.padding.no.side
         * @type        class
@@ -277,12 +277,12 @@
         * Reset **left** and **right** paddings
         *
         * @example 	html
-        * <div class="s-no-p-s" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="s-no-ps" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .s-no-p-s {
+      .s-no-ps {
         padding-left: 0 !important;
         padding-right: 0 !important;
       }
@@ -291,7 +291,7 @@
 
     @if class-match-namespace("sugar.helper.padding.no.y") {
       /**
-        * @name       	s-no-p-y
+        * @name       	s-no-py
         * @namespace       scss.core.class
         * @class-namespace           sugar.helper.padding.no.y
         * @type        class
@@ -299,12 +299,12 @@
         * Reset **top** and **bottom** paddings
         *
         * @example 	html
-        * <div class="s-no-p-y" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="s-no-py" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .s-no-p-y {
+      .s-no-py {
         padding-top: 0 !important;
         padding-bottom: 0 !important;
       }
