--- a/webcomponents/s-iframe/src/scss/_index.scss
+++ b/webcomponents/s-iframe/src/scss/_index.scss
@@ -11,7 +11,7 @@
  * <iframe is="s-iframe" src="https://coffeekraken.io"></iframe>
  *
  * @example       scss
- * @include s-iframe-classes();
+ * \@include s-iframe-classes();
  *
  * @since         2.0.0
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
