--- a/webcomponents/s-iframe/src/scss/_styleguide.scss
+++ b/webcomponents/s-iframe/src/scss/_styleguide.scss
@@ -1,9 +1,4 @@
-/* @keep */
+/* extract:data */
 @import './index';
 @include s-iframe-classes();
-/* @only */
-
-
-body {
-  color: red;
-}
+/* extract */
