--- a/toolkits/sugar/src/scss/components/_btn.scss
+++ b/toolkits/sugar/src/scss/components/_btn.scss
@@ -13,6 +13,7 @@
   * @param       {List}      [$colors:map-keys(setting('colors'))]       The colors you want to generate
   * @param       {List}      [$sizes:map-keys(setting('sizes'))]       The sizes you want to generate
   * @param       {Number}      [$base-padding: setting('look-and-feel.padding')]                 The base padding value used to interpolate the sizes
+  * @param       {Number}       [$border-radius: settings('look-and-feel.border-radius')]       The border radius you want
   * @param       {String}        [$name='s-btn']       The className to use for the generation
   *
   * @example         html
