--- a/toolkits/sugar/src/scss/core/color/_color.scss
+++ b/toolkits/sugar/src/scss/core/color/_color.scss
@@ -60,6 +60,7 @@
     $name: null;
   } @else if is($name, string) {
     $colorColor: setting('colors.#{$name}.color');
+    @error(setting('colors'));
   }
 
   @if $colorColor != null and is($colorColor, string) {
